# projections_pi

./: CMakeLists.txt  Projections.fbp  README  VERSION.cmake  appveyor.yml
cmake/: PluginConfigure.cmake
po/: POTFILES.in  ar_SA.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  it.po  it_IT.po  ja.po  ja_JP.po  mr_IN.po  nb.po  nb_NO.po  nl.po  nl_NL.po  pl.po  pl_PL.po  projections_pi.pot  pt.po  (+14 more)
src/: PreferencesDialog.cpp  PreferencesDialog.h  ProjectionsUI.cpp  ProjectionsUI.h  icons.cpp  icons.h  ocpn_plugin.h  projections_pi.cpp  projections_pi.h
